k8s/redis.yaml
# 由于此项目中的redis服务仅作为缓存，所以直接使用deployment即可
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: vmcontrolhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: valkey/valkey:9.0-alpine
        imagePullPolicy: IfNotPresent
        command: ["sh", "-c", "valkey-server --requirepass $REDIS_PASSWORD"]
        ports:
        - containerPort: 6379
        livenessProbe:
          exec:
            command: ["valkey-cli", "-a", "$REDIS_PASSWORD", "ping"]
          initialDelaySeconds: 15
          failureThreshold: 5
        readinessProbe:
          exec:
            command: ["valkey-cli", "-a", "$REDIS_PASSWORD", "ping"]
          initialDelaySeconds: 5


---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: vmcontrolhub
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
